--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask
-flask-cors
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-googleapiclient
-pyusb
+flask==3.0.1
+flask-cors==4.0.0
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
+google-api-python-client==2.98.0
+pyusb==1.2.1
